--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>HTML-шаблон</title>
 	<meta name="description" content=" ">
 	<meta name="keywords" content=" ">
+	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/styles.css">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
