--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
 <body>
 	<!-- Base Layout -->
-	
+	<header> 
+	</header>
+	<main>
+	</main>
+	<aside>
+	</aside>
+	<footer>
+	</footer>	
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
