--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<aside>
 	</aside>
 	<footer>
+		<p>© 2019 Copyright</p>
 	</footer>	
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
